EX-4385: fix freshtab horizontal  scrollbar

--- a/subprojects/fresh-tab-frontend/app/styles/freshtab.scss
+++ b/subprojects/fresh-tab-frontend/app/styles/freshtab.scss
@@ -778,7 +778,7 @@ body.freshTabContainer {
   }
 }
 
-@media (max-width: 940px) {
+@media (max-width: 1040px) {
 
   #freshTabPage #container {
     width: 100%;
